<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_login">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="24dp"
        android:paddingVertical="40dp">

        <ImageView
            android:id="@+id/iv_photo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:src="@drawable/ic_photo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:contentDescription="@string/text_photo" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_et_name"
            style="@style/Widget.Custom.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:hint="@string/text_name"
            app:layout_constraintTop_toBottomOf="@+id/iv_photo">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_et_palindrome"
            style="@style/Widget.Custom.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:hint="@string/text_palindrome"
            app:layout_constraintTop_toBottomOf="@+id/til_et_name">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_palindrome"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btn_check"
            style="@style/Widget.Custom.Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_check"
            android:layout_marginTop="40dp"
            app:layout_constraintTop_toBottomOf="@+id/til_et_palindrome" />

        <Button
            android:id="@+id/btn_next"
            style="@style/Widget.Custom.Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_next"
            android:layout_marginTop="14dp"
            app:layout_constraintTop_toBottomOf="@+id/btn_check" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>